fix(proxy): CORS headers